--- a/DexExam.Application/DexExam.Application.csproj
+++ b/DexExam.Application/DexExam.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Services\" />
+      <ProjectReference Include="..\DexExam.Domain\DexExam.Domain.csproj" />
     </ItemGroup>
 
 </Project>
