--- a/DexExam.API/DexExam.API.csproj
+++ b/DexExam.API/DexExam.API.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DexExam.Application\DexExam.Application.csproj" />
+      <ProjectReference Include="..\DexExam.Infrastructure\DexExam.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
